src/test/deca/syntax/invalid/antislash.deca
// Description:
//    String contenant un caractère interdit
//
// Resultats:
//    Erreur du lexer ligne 11, au niveau du \

{
    println("\");
}
